fix characters slider bug on IOS

--- a/src/assets/css/characters.css
+++ b/src/assets/css/characters.css
@@ -253,7 +253,7 @@
    -webkit-transform-style: preserve-3d;
    touch-action: manipulation;
    -webkit-tap-highlight-color: transparent;
-   transition: transform 0.5s ease, opacity 0.5s ease;
+   transition: transform 0.8s ease, opacity 0.5s ease;
    overflow: visible !important;
 }
 .swiper-slide-active {
